crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__batch_composite_keys-graph.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.products\" ]\n    2 [ label = \"Product.inventories\" ]\n    3 [ label = \"Inventory.countryId\" ]\n    4 [ label = \"Inventory.warehouseId\" ]\n    5 [ label = \"Root#ext\", shape=parallelogram, color=dodgerblue ]\n    6 [ label = \"products#ext\", shape=box, color=dodgerblue ]\n    7 [ label = \"inventories#ext@derive\", shape=box, color=dodgerblue ]\n    8 [ label = \"countryId#ext@derive\", shape=box, color=dodgerblue ]\n    9 [ label = \"warehouseId#ext@derive\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    2 -> 4 [ label = \"\" ]\n    0 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 5 [ label = \"\", style=dashed,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.products]
    2 [ Product.inventories]
    3 [ Inventory.countryId]
    4 [ Inventory.warehouseId]
    5 [ Root#ext]
    6 [ products#ext]
    7 [ inventories#ext@derive]
    8 [ countryId#ext@derive]
    9 [ warehouseId#ext@derive]
    0 -> 1 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    0 -> 5 [ label = "CreateChildResolver" ]
    0 -> 5 [ label = "HasChildResolver" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 1 [ label = "Provides" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 2 [ label = "Provides" ]
    7 -> 8 [ label = "CanProvide" ]
    8 -> 3 [ label = "Provides" ]
    7 -> 9 [ label = "CanProvide" ]
    9 -> 4 [ label = "Provides" ]
}
