crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__batch_composite_keys-solved.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Inventory.countryId\", color=forestgreen ]\n    2 [ label = \"Inventory.warehouseId\", color=forestgreen ]\n    3 [ label = \"Root#ext\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    4 [ label = \"products#ext\", shape=box, color=dodgerblue, color=forestgreen ]\n    5 [ label = \"inventories#ext@derive\", shape=box, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"countryId#ext@derive\", shape=box, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"warehouseId#ext@derive\", shape=box, color=dodgerblue, color=forestgreen ]\n    8 [ label=\"\", style=dashed]\n    0 -> 3 [ label = <<b>1</b>>, color=forestgreen,fontcolor=forestgreen ]\n    3 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 0 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Inventory.countryId", steiner=1 ]
    2 [ label = "Inventory.warehouseId", steiner=1 ]
    3 [ label = "Root#ext", steiner=1 ]
    4 [ label = "products#ext", steiner=1 ]
    5 [ label = "inventories#ext@derive", steiner=1 ]
    6 [ label = "countryId#ext@derive", steiner=1 ]
    7 [ label = "warehouseId#ext@derive", steiner=1 ]
    8 [ label="", style=dashed]
    0 -> 3 [ cost=1, steiner=1]
    3 -> 4 [ cost=0, steiner=1]
    4 -> 5 [ cost=0, steiner=1]
    5 -> 6 [ cost=0, steiner=1]
    6 -> 1 [ cost=0, steiner=1]
    5 -> 7 [ cost=0, steiner=1]
    7 -> 2 [ cost=0, steiner=1]
    8 -> 0 [ cost=0, steiner=1]
}
