crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__batch_composite_keys-solver.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Inventory.countryId\", style=dashed ]\n    2 [ label = \"Inventory.warehouseId\", style=dashed ]\n    3 [ label = \"Root#ext\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    4 [ label = \"products#ext\", shape=box, color=dodgerblue, style=dashed ]\n    5 [ label = \"inventories#ext@derive\", shape=box, color=dodgerblue, style=dashed ]\n    6 [ label = \"countryId#ext@derive\", shape=box, color=dodgerblue, style=dashed ]\n    7 [ label = \"warehouseId#ext@derive\", shape=box, color=dodgerblue, style=dashed ]\n    8 [ label=\"\", style=dashed]\n    0 -> 3 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Inventory.countryId", steiner=0 ]
    2 [ label = "Inventory.warehouseId", steiner=0 ]
    3 [ label = "Root#ext", steiner=0 ]
    4 [ label = "products#ext", steiner=0 ]
    5 [ label = "inventories#ext@derive", steiner=0 ]
    6 [ label = "countryId#ext@derive", steiner=0 ]
    7 [ label = "warehouseId#ext@derive", steiner=0 ]
    8 [ label="", style=dashed]
    0 -> 3 [ cost=1, steiner=0]
    3 -> 4 [ cost=0, steiner=0]
    4 -> 5 [ cost=0, steiner=0]
    5 -> 6 [ cost=0, steiner=0]
    6 -> 1 [ cost=0, steiner=0]
    5 -> 7 [ cost=0, steiner=0]
    7 -> 2 [ cost=0, steiner=0]
    8 -> 0 [ cost=0, steiner=0]
}
