crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__composite_keys-solved.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
}
